# pipewire-dbus

./: .gitignore  Cargo.toml  Justfile  README.md  meson-build-rust.sh  meson.build  org.local.PipewireDBus.xml
.github/workflows/: check.yml
data/: meson.build
src/: dbus.rs  event.rs  main.rs  request.rs  warmup.rs
src/pipewire/: audio_device.rs  audio_sink.rs  command.rs  metadata_node.rs  mod.rs  sink_props.rs  store.rs
systemd/: meson.build  pipewire-dbus.service
