[package]
name = "pipewire-dbus"
version = "3.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
zbus = { version = "5.3", default-features = false, features = ["tokio"] }
pipewire = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pretty_env_logger = "0.5"
log = "0.4"
